--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
     "crypto-js": "^4.2.0",
+    "docx": "^9.5.1",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.5",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.11.0"
+    "react-router-dom": "^7.11.0",
+    "recharts": "^3.6.0",
+    "vercel": "^50.4.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
