--- a/netlify.toml
+++ b/netlify.toml
@@ -12,4 +12,4 @@
 [[headers]]
   for = "/assets/*"
   [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"git add netlify.toml
+    Cache-Control = "public, max-age=31536000, immutable"
